--- a/Bullion/Common/GeneralTextField/GeneralTextField.xib
+++ b/Bullion/Common/GeneralTextField/GeneralTextField.xib
@@ -19,9 +19,12 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="GeneralTextField" customModule="Bullion" customModuleProvider="target">
             <connections>
+                <outlet property="calendarImgVw" destination="2o4-RV-8eI" id="fZa-Gv-6Sb"/>
+                <outlet property="containerImgView" destination="lTB-iQ-Fuy" id="QlV-N8-CZf"/>
                 <outlet property="containerTxtField" destination="g74-D5-aAV" id="k5c-HK-x4g"/>
+                <outlet property="eyeImgVw" destination="XIZ-pQ-hNV" id="crE-gM-Bue"/>
                 <outlet property="textField" destination="bWR-Bh-3a3" id="BhM-1R-fNt"/>
-                <outlet property="titleTxtField" destination="m7q-7A-0CZ" id="rnL-5O-ats"/>
+                <outlet property="titleTxtField" destination="m7q-7A-0CZ" id="f2g-y1-569"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -32,37 +35,73 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="g74-D5-aAV">
                     <rect key="frame" x="0.0" y="26" width="393" height="48"/>
                     <subviews>
-                        <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bWR-Bh-3a3">
+                        <stackView opaque="NO" contentMode="scaleToFill" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="YS8-Ty-uKH">
                             <rect key="frame" x="16" y="0.0" width="361" height="48"/>
-                            <color key="textColor" name="title_black"/>
-                            <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="14"/>
-                            <textInputTraits key="textInputTraits"/>
-                        </textField>
+                            <subviews>
+                                <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bWR-Bh-3a3">
+                                    <rect key="frame" x="0.0" y="0.0" width="361" height="48"/>
+                                    <color key="textColor" name="title_black"/>
+                                    <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="14"/>
+                                    <textInputTraits key="textInputTraits"/>
+                                </textField>
+                                <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lTB-iQ-Fuy">
+                                    <rect key="frame" x="0.0" y="0.0" width="40" height="48"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_eye_open" translatesAutoresizingMaskIntoConstraints="NO" id="XIZ-pQ-hNV">
+                                            <rect key="frame" x="12" y="16" width="16" height="16"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="16" id="bPI-YD-HYV"/>
+                                                <constraint firstAttribute="width" constant="16" id="bcl-37-aHf"/>
+                                            </constraints>
+                                        </imageView>
+                                    </subviews>
+                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="40" id="6YW-cM-Xhg"/>
+                                        <constraint firstItem="XIZ-pQ-hNV" firstAttribute="centerY" secondItem="lTB-iQ-Fuy" secondAttribute="centerY" id="LKK-Sn-mwG"/>
+                                        <constraint firstItem="XIZ-pQ-hNV" firstAttribute="centerX" secondItem="lTB-iQ-Fuy" secondAttribute="centerX" id="TG9-mM-ZG6"/>
+                                    </constraints>
+                                </view>
+                                <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_calendar" translatesAutoresizingMaskIntoConstraints="NO" id="2o4-RV-8eI">
+                                    <rect key="frame" x="0.0" y="14" width="20" height="20"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="20" id="7qg-jj-j2J"/>
+                                        <constraint firstAttribute="width" constant="20" id="OxV-QP-46L"/>
+                                    </constraints>
+                                </imageView>
+                            </subviews>
+                            <constraints>
+                                <constraint firstItem="bWR-Bh-3a3" firstAttribute="top" secondItem="YS8-Ty-uKH" secondAttribute="top" id="7PQ-yT-sJH"/>
+                                <constraint firstAttribute="bottom" secondItem="bWR-Bh-3a3" secondAttribute="bottom" id="HAx-Dj-4em"/>
+                                <constraint firstItem="lTB-iQ-Fuy" firstAttribute="top" secondItem="YS8-Ty-uKH" secondAttribute="top" id="hAT-21-yFR"/>
+                                <constraint firstAttribute="bottom" secondItem="lTB-iQ-Fuy" secondAttribute="bottom" id="llm-e9-GMB"/>
+                            </constraints>
+                        </stackView>
                     </subviews>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <constraints>
-                        <constraint firstItem="bWR-Bh-3a3" firstAttribute="leading" secondItem="g74-D5-aAV" secondAttribute="leading" constant="16" id="2t0-Yf-y8T"/>
-                        <constraint firstAttribute="bottom" secondItem="bWR-Bh-3a3" secondAttribute="bottom" id="2xc-tM-1dI"/>
-                        <constraint firstItem="bWR-Bh-3a3" firstAttribute="top" secondItem="g74-D5-aAV" secondAttribute="top" id="DO3-0P-14z"/>
-                        <constraint firstAttribute="trailing" secondItem="bWR-Bh-3a3" secondAttribute="trailing" constant="16" id="Y3C-B3-ggP"/>
+                        <constraint firstItem="YS8-Ty-uKH" firstAttribute="top" secondItem="g74-D5-aAV" secondAttribute="top" id="8vv-zW-ckn"/>
+                        <constraint firstItem="YS8-Ty-uKH" firstAttribute="leading" secondItem="g74-D5-aAV" secondAttribute="leading" constant="16" id="SWp-Ja-HBB"/>
+                        <constraint firstAttribute="trailing" secondItem="YS8-Ty-uKH" secondAttribute="trailing" constant="16" id="YMD-9n-QfF"/>
                         <constraint firstAttribute="height" constant="48" id="eNu-8E-eup"/>
+                        <constraint firstAttribute="bottom" secondItem="YS8-Ty-uKH" secondAttribute="bottom" id="pjq-Nu-O3B"/>
                     </constraints>
                 </view>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m7q-7A-0CZ">
-                    <rect key="frame" x="0.0" y="0.0" width="393" height="16.666666666666668"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m7q-7A-0CZ" customClass="GradientLabel" customModule="Bullion" customModuleProvider="target">
+                    <rect key="frame" x="0.0" y="0.0" width="34.333333333333336" height="16.666666666666668"/>
                     <fontDescription key="fontDescription" name="Roboto-Medium" family="Roboto" pointSize="14"/>
                     <color key="textColor" name="wording_gradient_second"/>
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="m7q-7A-0CZ" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="8Ey-Rk-ofR"/>
                 <constraint firstItem="g74-D5-aAV" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="Ing-h7-p5R"/>
                 <constraint firstItem="g74-D5-aAV" firstAttribute="top" relation="greaterThanOrEqual" secondItem="m7q-7A-0CZ" secondAttribute="bottom" constant="5" id="PR9-ZW-EfC"/>
                 <constraint firstAttribute="bottom" secondItem="g74-D5-aAV" secondAttribute="bottom" id="XUD-a6-mGH"/>
-                <constraint firstAttribute="trailing" secondItem="m7q-7A-0CZ" secondAttribute="trailing" id="bWN-L4-o5c"/>
+                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="m7q-7A-0CZ" secondAttribute="trailing" id="bWN-L4-o5c"/>
                 <constraint firstItem="m7q-7A-0CZ" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="wed-Tf-EOw"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="g74-D5-aAV" secondAttribute="trailing" id="z0a-Xr-qKM"/>
             </constraints>
@@ -71,6 +110,8 @@
         </view>
     </objects>
     <resources>
+        <image name="ic_calendar" width="17.666666030883789" height="20"/>
+        <image name="ic_eye_open" width="16" height="16"/>
         <namedColor name="title_black">
             <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
