--- a/Bullion/Module/Login/LoginView.xib
+++ b/Bullion/Module/Login/LoginView.xib
@@ -5,7 +5,6 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -46,14 +45,14 @@
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jMm-sT-gC3" customClass="GeneralTextField" customModule="Bullion" customModuleProvider="target">
                             <rect key="frame" x="20" y="32" width="353" height="74"/>
-                            <color key="backgroundColor" name="orange_fiirst"/>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="74" id="blA-gi-IBg"/>
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="frb-QO-pVS" customClass="GeneralTextField" customModule="Bullion" customModuleProvider="target">
                             <rect key="frame" x="20" y="122" width="353" height="74"/>
-                            <color key="backgroundColor" name="orange_fiirst"/>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="74" id="sDa-Iu-v3I"/>
                             </constraints>
@@ -73,7 +72,7 @@
                             </constraints>
                         </view>
                     </subviews>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <color key="backgroundColor" red="0.97647058823529409" green="0.97647058823529409" blue="0.98039215686274506" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstItem="frb-QO-pVS" firstAttribute="leading" secondItem="g2O-Kg-xbg" secondAttribute="leading" constant="20" id="1SF-4A-ANW"/>
                         <constraint firstItem="UgD-Ie-StF" firstAttribute="leading" secondItem="g2O-Kg-xbg" secondAttribute="leading" constant="20" id="6eR-4s-EJp"/>
@@ -110,8 +109,5 @@
         <namedColor name="orange_fiirst">
             <color red="0.9882352941176471" green="0.40784313725490196" blue="0.22745098039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
     </resources>
 </document>
