feat: integration login

--- a/Bullion/Common/GeneralButton/GeneralButton.xib
+++ b/Bullion/Common/GeneralButton/GeneralButton.xib
@@ -4,6 +4,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -14,6 +15,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="GeneralButton" customModule="Bullion" customModuleProvider="target">
             <connections>
+                <outlet property="containerView" destination="GYy-S6-wm4" id="UcR-M0-JO7"/>
                 <outlet property="titleLbl" destination="dOb-z1-qEd" id="VQR-ZV-VEG"/>
             </connections>
         </placeholder>
@@ -22,28 +24,40 @@
             <rect key="frame" x="0.0" y="0.0" width="393" height="47"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dOb-z1-qEd">
-                    <rect key="frame" x="181" y="16.666666666666668" width="31" height="14"/>
-                    <fontDescription key="fontDescription" name="Inter-Regular" family="Inter" pointSize="12"/>
-                    <color key="textColor" name="title_white"/>
-                    <nil key="highlightedColor"/>
-                </label>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GYy-S6-wm4">
+                    <rect key="frame" x="0.0" y="0.0" width="393" height="47"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dOb-z1-qEd">
+                            <rect key="frame" x="181" y="16.666666666666668" width="31" height="14"/>
+                            <fontDescription key="fontDescription" name="Inter-Regular" family="Inter" pointSize="12"/>
+                            <color key="textColor" name="title_white"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <constraints>
+                        <constraint firstItem="dOb-z1-qEd" firstAttribute="centerY" secondItem="GYy-S6-wm4" secondAttribute="centerY" id="2Pc-jW-eiP"/>
+                        <constraint firstItem="dOb-z1-qEd" firstAttribute="centerX" secondItem="GYy-S6-wm4" secondAttribute="centerX" id="GQv-Rj-F9q"/>
+                    </constraints>
+                </view>
             </subviews>
-            <color key="backgroundColor" name="button_blue"/>
+            <color key="backgroundColor" name="title_white"/>
             <constraints>
-                <constraint firstItem="dOb-z1-qEd" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="56x-7P-Gix"/>
-                <constraint firstItem="dOb-z1-qEd" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="dn6-sw-N5K"/>
+                <constraint firstAttribute="bottom" secondItem="GYy-S6-wm4" secondAttribute="bottom" id="VSM-Xs-Nuh"/>
+                <constraint firstItem="GYy-S6-wm4" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="Yf0-z8-i7r"/>
+                <constraint firstItem="GYy-S6-wm4" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="dOV-oT-Oyh"/>
+                <constraint firstAttribute="trailing" secondItem="GYy-S6-wm4" secondAttribute="trailing" id="vKP-Ja-GuA"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="101" y="21"/>
         </view>
     </objects>
     <resources>
-        <namedColor name="button_blue">
-            <color red="0.14509803921568629" green="0.36862745098039218" blue="0.5725490196078431" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
         <namedColor name="title_white">
             <color red="0.99607843137254903" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
