--- a/Bullion/Module/FormUser/FormUserView.xib
+++ b/Bullion/Module/FormUser/FormUserView.xib
@@ -19,6 +19,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FormUserView" customModule="Bullion" customModuleProvider="target">
             <connections>
+                <outlet property="addressTxtField" destination="zEc-yb-L3m" id="DkJ-4c-4J7"/>
                 <outlet property="backImgVw" destination="Web-ds-gIY" id="ajd-Jc-vmg"/>
                 <outlet property="boxFemaleImgVw" destination="XpH-kV-1gp" id="o75-5q-kkQ"/>
                 <outlet property="boxMaleImgVw" destination="dXO-jG-eUR" id="5ev-Lx-W3l"/>
@@ -75,7 +76,7 @@
                             <rect key="frame" x="0.0" y="0.0" width="393" height="575"/>
                             <subviews>
                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="center" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="g6N-kS-D6e">
-                                    <rect key="frame" x="0.0" y="32" width="393" height="708"/>
+                                    <rect key="frame" x="0.0" y="32" width="393" height="802"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RaL-M8-zYc" customClass="GeneralTextField" customModule="Bullion" customModuleProvider="target">
                                             <rect key="frame" x="20" y="0.0" width="353" height="78"/>
@@ -199,22 +200,29 @@
                                                 <constraint firstAttribute="height" constant="78" id="id4-4B-pMg"/>
                                             </constraints>
                                         </view>
-                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Txs-jG-GOV" customClass="GeneralTextField" customModule="Bullion" customModuleProvider="target">
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zEc-yb-L3m" customClass="GeneralTextField" customModule="Bullion" customModuleProvider="target">
                                             <rect key="frame" x="20" y="442" width="353" height="78"/>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="78" id="YWj-0a-rEO"/>
+                                            </constraints>
+                                        </view>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Txs-jG-GOV" customClass="GeneralTextField" customModule="Bullion" customModuleProvider="target">
+                                            <rect key="frame" x="20" y="536" width="353" height="78"/>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="78" id="dJJ-Kr-UQH"/>
                                             </constraints>
                                         </view>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QVD-wD-K7i" customClass="GeneralTextField" customModule="Bullion" customModuleProvider="target">
-                                            <rect key="frame" x="20" y="536" width="353" height="78"/>
+                                            <rect key="frame" x="20" y="630" width="353" height="78"/>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="78" id="D94-QP-vcs"/>
                                             </constraints>
                                         </view>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oql-IP-wcX" customClass="GeneralTextField" customModule="Bullion" customModuleProvider="target">
-                                            <rect key="frame" x="20" y="630" width="353" height="78"/>
+                                            <rect key="frame" x="20" y="724" width="353" height="78"/>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="78" id="wbm-wp-WbV"/>
@@ -227,6 +235,7 @@
                                         <constraint firstAttribute="trailing" secondItem="Txs-jG-GOV" secondAttribute="trailing" constant="20" id="8D9-3L-MAs"/>
                                         <constraint firstItem="RaL-M8-zYc" firstAttribute="leading" secondItem="g6N-kS-D6e" secondAttribute="leading" constant="20" id="EIC-1C-Jzw"/>
                                         <constraint firstAttribute="trailing" secondItem="hIP-KP-JPp" secondAttribute="trailing" constant="20" id="HVz-S0-sEc"/>
+                                        <constraint firstItem="zEc-yb-L3m" firstAttribute="leading" secondItem="g6N-kS-D6e" secondAttribute="leading" constant="20" id="INx-oJ-zh0"/>
                                         <constraint firstItem="hIP-KP-JPp" firstAttribute="leading" secondItem="g6N-kS-D6e" secondAttribute="leading" constant="20" id="KRk-6t-GuL"/>
                                         <constraint firstAttribute="trailing" secondItem="aWE-9c-qJB" secondAttribute="trailing" constant="20" id="KZw-Lk-VLD"/>
                                         <constraint firstItem="emq-Ci-YME" firstAttribute="leading" secondItem="g6N-kS-D6e" secondAttribute="leading" constant="20" id="SBy-KO-TdG"/>
@@ -234,6 +243,7 @@
                                         <constraint firstAttribute="trailing" secondItem="QVD-wD-K7i" secondAttribute="trailing" constant="20" id="ZbQ-Yt-BH3"/>
                                         <constraint firstItem="aWE-9c-qJB" firstAttribute="leading" secondItem="g6N-kS-D6e" secondAttribute="leading" constant="20" id="h7d-r9-pKe"/>
                                         <constraint firstItem="oql-IP-wcX" firstAttribute="leading" secondItem="g6N-kS-D6e" secondAttribute="leading" constant="20" id="hyh-sN-roj"/>
+                                        <constraint firstAttribute="trailing" secondItem="zEc-yb-L3m" secondAttribute="trailing" constant="20" id="iOk-HD-5Ay"/>
                                         <constraint firstAttribute="trailing" secondItem="emq-Ci-YME" secondAttribute="trailing" constant="20" id="lwE-rC-Tgd"/>
                                         <constraint firstAttribute="trailing" secondItem="RaL-M8-zYc" secondAttribute="trailing" constant="20" id="v3v-s6-dLt"/>
                                         <constraint firstItem="QVD-wD-K7i" firstAttribute="leading" secondItem="g6N-kS-D6e" secondAttribute="leading" constant="20" id="vnr-Tg-MV9"/>
